Bug 207525 - [iOS] Non-internal API test runners frequently crash due to Objective-C exceptions
Summary: [iOS] Non-internal API test runners frequently crash due to Objective-C excep...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Tools / Tests (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2020-02-10 17:24 PST by Wenson Hsieh
Modified: 2020-02-11 00:24 PST (History)
6 users (show)

See Also:


Attachments
Patch (5.14 KB, patch)
2020-02-10 20:48 PST, Wenson Hsieh
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2020-02-10 17:24:08 PST
<rdar://problem/59110543>
Comment 1 Wenson Hsieh 2020-02-10 20:48:04 PST
Created attachment 390341 [details]
Patch
Comment 2 WebKit Commit Bot 2020-02-11 00:24:52 PST
Comment on attachment 390341 [details]
Patch

Clearing flags on attachment: 390341

Committed r256297: <https://trac.webkit.org/changeset/256297>
Comment 3 WebKit Commit Bot 2020-02-11 00:24:54 PST
All reviewed patches have been landed.  Closing bug.