Tools/TestWebKitAPI/ios/UIKitSPI.h
@@ -252,4 +252,8 @@ typedef NS_ENUM(NSUInteger, _UIClickInteractionEvent) {
 - (void)_share:(id)sender;
 @end
 
+@interface UIApplication (Internal)
++ (NSString *)displayIdentifier;
+@end
+
 #endif // PLATFORM(IOS_FAMILY)
